--- a/Pages/DelViewEnrollment.razor
+++ b/Pages/DelViewEnrollment.razor
@@ -1,11 +1,23 @@
-@page "/deviewEnrollment"
+@page "/delviewEnrollment"
 
 <EditForm Model="@ViewEnrollment" OnValidSubmit="HandleValidSubmit">
   <DataAnnotationsValidator/>
-    <h3>Create Student</h3>
+    <h3>Create Students</h3>
     <hr/>
     
     
+ <div class="form-group row">
+    <label for="firstName" class="col-sm-2 col-form-label">
+      Nim
+
+    </label>
+        <div class="col-sm-10">
+            <InputText id="firstName" class="form-control" placeholder="Nim"
+            @bind-Value="ViewEnrollment.firstName"/>
+            <ValidationMessage For="@(()=>ViewEnrollment.firstName)" />
+        </div>
+    </div>
+
     <div class="form-group row">
     <label for="firstName" class="col-sm-2 col-form-label">
       First Name
@@ -36,6 +48,7 @@
 
           </div>
       </div>
+      
       <button class="btn btn-primary" type="submit">Submit</button>
 
 </EditForm>
