--- a/Pages/DetailssViewEnrollment.razor
+++ b/Pages/DetailssViewEnrollment.razor
@@ -1,8 +1,8 @@
-@page "/addviewEnrollment"
+@page "/detailssviewEnrollment"
 
 <EditForm Model="@ViewEnrollment" OnValidSubmit="HandleValidSubmit">
   <DataAnnotationsValidator/>
-    <h3>Edit Student</h3>
+    <h3>Details Student</h3>
     <hr/>
     
     
