--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -18,21 +18,30 @@
                 <span class="oi oi-briefcase" aria-hidden="true"></span> List Of Student
             </NavLink>
         </li>
+         <li
+          class="nav-item px-3">
+            <NavLink class="nav-link" href="detailssviewEnrollment">
+                <span class="oi oi-briefcase" aria-hidden="true"></span> Details
+            </NavLink>
+        </li>
            <li class="nav-item px-3">
             <NavLink class="nav-link" href="addViewEnrollment">
                 <span class="oi oi-briefcase" aria-hidden="true"></span> Edit Student
             </NavLink>
         </li>
          <li class="nav-item px-3">
-            <NavLink class="nav-link" href="addViewEnrollment">
+            <NavLink class="nav-link" href="delViewEnrollment">
                 <span class="oi oi-briefcase" aria-hidden="true"></span> Create Students
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="viewEnrollmentpage">
+
+          <li class="nav-item px-3">
+            <NavLink class="nav-link" href="corseviewEnrollment">
                 <span class="oi oi-people" aria-hidden="true"></span> ShowEnrollment
             </NavLink>
         </li>
+
+      
     </ul>
 </div>
 
